--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
    <big>Youth Solution</big><br>
    <small>Youth Move</small>
 
+    <h1>Ordered List</h1>
+    <ol>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ol>
+
+   <h1>UnOrdered List</h1>
+   <ul>
+       <li>One</li>
+       <li>Two</li>
+       <li>Three</li>
+   </ul>
 
 </body>
 </html>
