image tag and creating source folder

--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
        <li>Three</li>
    </ul>
 
+   <h1>Input Tag</h1>
+   <input type="password">
+
+   <h1>Image tag </h1>
+   <img src="./img/pexels-pixabay-210474.jpg" alt="">
+
 </body>
 </html>
