Html input fields and form tag captured and proceeded to build a form with input tags

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
    <h1>UnOrdered List</h1>
    <ul>
+
        <li>One</li>
        <li>Two</li>
        <li>Three</li>
@@ -34,6 +35,28 @@
 
    <h1>Image tag </h1>
    <img src="./img/pexels-pixabay-210474.jpg" alt="">
+
+   <h1>Anchor tags</h1>
+   <a href="https://www.google.com">Ghana Solutions please click to google website</a>
+
+    <h1>Target attribute to open to new tab</h1>
+   <a href="https://www.google.com" target="_blank">Ghana Solutions please click to google website</a>
+
+    <h1>Button</h1>
+   <button type="submit">Submit</button>
+
+    <h1>Form tags</h1>
+   <form action="POST"></form>
+
+     <h1>Input and form tag</h1>
+    <input type="email" placeholder="your email" /><br><br>
+
+   <form action="POST">
+       <input type="text" placeholder="Your name">
+       <input type="email" placeholder="Your email">
+       <input type="password" placeholder="Your password">
+       <button type="submit">sign Up</button>
+   </form>
 
 </body>
 </html>
