grouping tags .examples are section and div tags

--- a/index.html
+++ b/index.html
@@ -58,5 +58,21 @@
        <button type="submit">sign Up</button>
    </form>
 
+   <div>
+       <h1>This is my heading </h1>
+       <p>This is my Paragraph</p>
+       <big>This is the big tag</big>
+       <small>This is the small tag</small>
+   </div>
+    <section>
+        <div>
+            <h1>This is my heading </h1>
+            <p>This is my Paragraph</p>
+            <big>This is the big tag</big>
+            <small>This is the small tag</small>
+        </div>
+
+    </section>
+
 </body>
 </html>
