classes and ID in a tag

--- a/index.html
+++ b/index.html
@@ -74,5 +74,11 @@
 
     </section>
 
+
+   <h1>Classes and IDs</h1>
+
+   <p class="first-tag" id="second-id">This is a paragraph tags</p>
+    <p class="first-tag">This is a paragraph tags</p>
+     <p id="first-id" class="second-tags">This is the second tag</p>
 </body>
 </html>
