css selectors and syntax

--- a/project/index.html
+++ b/project/index.html
@@ -29,6 +29,7 @@
 
          </section>
 
+       <!-- This is the div wrapping section, when styling we can use this-->
        <div class="bottom-element">
                    <img src="./img/DSC_5957.JPG" alt="">
 
