--- a/CSSProject/index.html
+++ b/CSSProject/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ghana</title>
-    <link rel="stylesheet" href="./css/index.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
 </head>
 <body>
       <!--CASCADING STYLE SHEET
         <p class="first-class" id="firs-class1"> I am great Ghanaian</p>-->
-        <h3>My CSS Class</h3>
+       <!-- <h3>My CSS Class</h3>
         <p> Do not forget to like me for who I am </p>
         <small class="small-class">Ghana Atsu Solution</small><br>
-        <small id="small-id">2020/2021</small>
+        <small id="small-id">2020/2021</small>-->
+
+      <h1>First heading tag</h1>
+      <h2>Second heading tag</h2>
+      <h3>Third heading tag</h3>
 </body>
 </html>
