--- a/CSSProject/index.html
+++ b/CSSProject/index.html
@@ -15,8 +15,10 @@
         <small class="small-class">Ghana Atsu Solution</small><br>
         <small id="small-id">2020/2021</small>-->
 
-      <h1>First heading tag</h1>
+      <!--<h1>First heading tag</h1>
       <h2>Second heading tag</h2>
-      <h3>Third heading tag</h3>
+      <h3>Third heading tag</h3>-->
+
+      <p style="background-color: green; color: wheat;">Joy News</p>
 </body>
 </html>
