height and width properties

--- a/CSSProject/index.html
+++ b/CSSProject/index.html
@@ -19,6 +19,13 @@
       <h2>Second heading tag</h2>
       <h3>Third heading tag</h3>-->
 
-      <p style="background-color: green; color: wheat;">Joy News</p>
+      <!--<p style="background-color: green; color: wheat;">Joy News</p>-->
+      <div style="background-color: grey; height: 400px; width: 400px">
+          <h5>Welcome, You Can Have A Seat</h5>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+      </div>
 </body>
 </html>
