selecting font for website (fonts.google.com)

--- a/CSSProject/index.html
+++ b/CSSProject/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ghana</title>
     <link rel="stylesheet" href="css/index.css" type="text/css">
+    <!--<link rel="preconnect" href="https://fonts.gstatic.com">-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
       <!--CASCADING STYLE SHEET
@@ -20,12 +22,19 @@
       <h3>Third heading tag</h3>-->
 
       <!--<p style="background-color: green; color: wheat;">Joy News</p>-->
-      <div style="background-color: grey; height: 400px; width: 400px">
+
+     <!-- <div style="background-color: grey; height: 400px; width: 400px">
           <h5>Welcome, You Can Have A Seat</h5>
           <p>The core of our tutorials is, EASY LEARNING</p><br>
           <p>The core of our tutorials is, EASY LEARNING</p><br>
           <p>The core of our tutorials is, EASY LEARNING</p><br>
           <p>The core of our tutorials is, EASY LEARNING</p><br>
-      </div>
+      </div>-->
+
+      <p>
+          I am trying to test fonts <br>
+          and this is my best method. <br>
+          Do not forget to like me for making such an attempt
+      </p>
 </body>
 </html>
