creating a html form-first part without css

--- a/CSSProject/index.html
+++ b/CSSProject/index.html
@@ -31,10 +31,18 @@
           <p>The core of our tutorials is, EASY LEARNING</p><br>
       </div>-->
 
-      <p>
+      <div style="background-color: grey; height: 400px; width: 400px; margin: 400px; /*padding: 400px*/">
+          <h5>Welcome, You Can Have A Seat</h5>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+          <p>The core of our tutorials is, EASY LEARNING</p><br>
+      </div>
+
+      <!--<p>
           I am trying to test fonts <br>
           and this is my best method. <br>
           Do not forget to like me for making such an attempt
-      </p>
+      </p>-->
 </body>
 </html>
