created Login Form using HTML and CSS

--- a/CSSProject/index.html
+++ b/CSSProject/index.html
@@ -31,7 +31,7 @@
           <p>The core of our tutorials is, EASY LEARNING</p><br>
       </div>-->
 
-      <div style="background-color: grey; height: 400px; width: 400px; margin: 400px; /*padding: 400px*/">
+      <div style="background-color: grey; height: 400px; width: 400px; /*margin: 400px;*/ padding: 400px">
           <h5>Welcome, You Can Have A Seat</h5>
           <p>The core of our tutorials is, EASY LEARNING</p><br>
           <p>The core of our tutorials is, EASY LEARNING</p><br>
