--- a/FormProject/form.html
+++ b/FormProject/form.html
@@ -13,15 +13,15 @@
     <!--<h1>Hello World, Ghana First </h1>-->
     <section class="form-section">
 
-        <img src="./img/person-icon-1687.png" alt="person">
+        <img src="./img/person-icon-1687.png" alt="person" class="img-class">
 
         <form action="POST" enctype="multipart/form-data">
             <p>Username</p>
             <input type="username" name="username" placeholder="username">
 
             <p>Password</p>
-            <input type="password" name="password" placeholder="password">
-            <button type="submit">Login</button>
+            <input type="password" name="password" placeholder="password"> <br>
+            <button type="submit">Login</button><br>
             <a href="#" class="forgot-password">Forgot Password</a>
 
         </form>
