--- a/website/index.html
+++ b/website/index.html
@@ -70,5 +70,9 @@
             </div>
         </section>
 
+        <section id="footer">
+            <p>Copyright 2020.</p>
+        </section>
+
 </body>
 </html>
