--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -12,7 +12,7 @@
     <title>Bootstrap Project</title>
 </head>
 <body>
-<div class="container">
+<!--<div class="container">
     <div class="row">
         <div class="col-md-6" style="background-color: blue">
             <p>This is bootstrap</p>
@@ -45,7 +45,26 @@
     </div>
 
 
-</div>
+</div>-->
+
+<!--adding margin to all sides(bottom,top,left,right) -->
+<p class="m-3">This is my class</p>
+
+<!--adding margin-top -->
+<p class="mt-3">This is my class</p>
+
+<!--adding margin-right -->
+<p class="mr-3">This is my class</p>
+
+<!--adding margin-bottom -->
+<p class="mb-3">This is my class</p>
+
+<!--adding margin-left -->
+<p class="ml-3">This is my class</p>
+
+
+
+
 
 
 
