applying margin to elements using bootstrap

--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -47,20 +47,21 @@
 
 </div>-->
 
-<!--adding margin to all sides(bottom,top,left,right) -->
+<!--adding margin to all sides(bottom,top,left,right)
 <p class="m-3">This is my class</p>
 
-<!--adding margin-top -->
+&lt;!&ndash;adding margin-top &ndash;&gt;
 <p class="mt-3">This is my class</p>
 
-<!--adding margin-right -->
+&lt;!&ndash;adding margin-right &ndash;&gt;
 <p class="mr-3">This is my class</p>
 
-<!--adding margin-bottom -->
+&lt;!&ndash;adding margin-bottom &ndash;&gt;
 <p class="mb-3">This is my class</p>
 
-<!--adding margin-left -->
-<p class="ml-3">This is my class</p>
+&lt;!&ndash;adding margin-left &ndash;&gt;
+<p class="ml-3">This is my class</p>-->
+
 
 
 
