--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -63,6 +63,20 @@
 <p class="ml-3">This is my class</p>-->
 
 
+<!--padding from all sides of the elements-->
+<p class="p-4">This is a padding</p>
+
+<!--padding top-->
+<p class="pt-4">This is a padding</p>
+
+<!--padding bottom-->
+<p class="pb-4">This is a padding</p>
+
+<!--padding left-->
+<p class="pl-4">This is a padding</p>
+
+<!--padding right-->
+<p class="pr-4">This is a padding</p>
 
 
 
