--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -63,20 +63,20 @@
 <p class="ml-3">This is my class</p>-->
 
 
-<!--padding from all sides of the elements-->
+<!--padding from all sides of the elements
 <p class="p-4">This is a padding</p>
 
-<!--padding top-->
+&lt;!&ndash;padding top&ndash;&gt;
 <p class="pt-4">This is a padding</p>
 
-<!--padding bottom-->
+&lt;!&ndash;padding bottom&ndash;&gt;
 <p class="pb-4">This is a padding</p>
 
-<!--padding left-->
+&lt;!&ndash;padding left&ndash;&gt;
 <p class="pl-4">This is a padding</p>
 
-<!--padding right-->
-<p class="pr-4">This is a padding</p>
+&lt;!&ndash;padding right&ndash;&gt;
+<p class="pr-4">This is a padding</p>-->
 
 
 
