--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -78,7 +78,8 @@
 &lt;!&ndash;padding right&ndash;&gt;
 <p class="pr-4">This is a padding</p>-->
 
-
+<p class="text-primary">This me in Ghana</p>
+<p class="text-light bg-dark">This me in Ghana</p>
 
 
 
