--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -81,6 +81,10 @@
 <!--<p class="text-primary">This me in Ghana</p>
 <p class="text-light bg-dark">This me in Ghana</p>-->
 
+<div class="bg-info shadow p-3 mb-5 bg-white rounded">
+    <p>This is a tag</p>
+</div>
+
 
 
 
