--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -86,14 +86,15 @@
 </div>-->
 
 
+<!--
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">Logo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-       <!-- <ul class="navbar-nav">-->
-        <ul class="navbar-nav ml-lg-auto"><!--ml-lg-auto shift the list to the right-->
+       &lt;!&ndash; <ul class="navbar-nav">&ndash;&gt;
+        <ul class="navbar-nav ml-lg-auto">&lt;!&ndash;ml-lg-auto shift the list to the right&ndash;&gt;
 
             <li class="nav-item">
                 <a class="nav-link" href="#">Services</a>
@@ -114,7 +115,12 @@
         </ul>
     </div>
 </nav>
+-->
 
+   <section id="banner-section" class="d-none d-sm-block" >
+
+       <p class="bg-nfo">This is my section for the banner</p>
+   </section>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
