bootstrap simple landing page with mobile display completed

--- a/BootstrapProject/index.html
+++ b/BootstrapProject/index.html
@@ -117,10 +117,84 @@
 </nav>
 -->
 
+ <!--   &lt;!&ndash;Display property&ndash;&gt;
    <section id="banner-section" class="d-none d-sm-block" >
 
        <p class="bg-nfo">This is my section for the banner</p>
-   </section>
+   </section>-->
+
+      <!--<section id="nav-section"> The shadow class is from bootstrap search -shadow-->
+      <!-- <section id="nav-section" class="shadow p-3 mb-5 bg-white rounded">-->
+      <section id="nav-section" class="">
+
+          <!--<nav class="navbar navbar-expand-lg navbar-light">-->
+          <nav class="shadow p-3 mb-1 bg-white rounded navbar navbar-expand-lg navbar-light">
+              <a class="navbar-brand" href="#">FelixAuto</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ml-lg-auto">
+                      <li class="nav-item active">
+                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Features</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Pricing</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                      </li>
+                  </ul>
+              </div>
+          </nav>
+
+      </section>
+
+
+       <section id="banner-desktop" style="height: 100vh" class="d-none d-sm-block">
+           <div class="container">
+               <div class="row">
+                    <div class="col-md-6">
+                        <h1 class="text-white text-muted">Welcome</h1>
+                        <p class="text-white text-muted">To Continue</p>
+                        <button>Click here</button>
+                    </div>
+
+
+                   <div class="col-md-6">
+                     <div>
+                         <h1 class="text-center text-white text-muted">Something Basic</h1>
+                         <!--go to google and type: web color picker-->
+                     </div>
+                   </div>
+               </div>
+           </div>
+
+       </section>
+
+<section id="banner-mobile" style="height: 100vh;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="text-white text-muted mt-5 text-center">Welcome</h1>
+                <p class="text-white text-muted text-center">To Continue</p>
+            </div>
+
+
+            <div class="col-md-6">
+                <div>
+                    <h1 class="text-center text-white text-muted mt-5">Something Basic</h1>
+                    <!--go to google and type: web color picker-->
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
